--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,37 +1,55 @@
 <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
+<section id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Services</h2>
+
+                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4">
+        </div>
+
+
+        <div class="nav row text-center">
+            <div class="col-md-4">
+                <a href="#home" data-toggle="tab">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#profile" data-toggle="tab">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#messages" data-toggle="tab">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
+                </a>
             </div>
         </div>
-    </section>
+
+        <hr>
+        <div class="tab-content text-center">
+            <div class="tab-pane active" id="home">
+                <p class="text-muted">He guides simple yet powerful coaching techniques to support you in achieving your goals to become a healthier, happier you. Relax and focus, with private or group sessions, through Yoga, Laughing or other relaxation techniques. In whatever way you decide you want to feel good, focus and achieve your goals. These techniques produce proven results with practice! Read our testimonials. In this busy world, make the time for yourself for a bit of personal development.</p>
+            </div>
+            <div class="tab-pane" id="profile">...</div>
+            <div class="tab-pane" id="messages">...</div>
+            <div class="tab-pane" id="settings">...</div>
+        </div>
+
+
+    </div>
+</section>
