--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,55 +1,89 @@
 <!-- Services Section -->
 <section id="services">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Services</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Services</h2>
 
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
+        <h3 class="section-subheading text-muted">Frazer Kirkman is available for a variety of coaching services.</h3>
+      </div>
+    </div>
 
 
-        <div class="nav row text-center">
-            <div class="col-md-4">
-                <a href="#home" data-toggle="tab">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="#profile" data-toggle="tab">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="#messages" data-toggle="tab">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                </a>
-            </div>
-        </div>
+    <div class="nav row text-center">
+      <div class="col-md-4">
+        <a href="#home" data-toggle="tab">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Corporate</h4>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#profile" data-toggle="tab">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Private Coaching</h4>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#messages" data-toggle="tab">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Public Workshops</h4>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="#messages" data-toggle="tab">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Educational Institutions</h4>
+        </a>
+      </div>
+    </div>
 
-        <hr>
-        <div class="tab-content text-center">
-            <div class="tab-pane active" id="home">
-                <p class="text-muted">He guides simple yet powerful coaching techniques to support you in achieving your goals to become a healthier, happier you. Relax and focus, with private or group sessions, through Yoga, Laughing or other relaxation techniques. In whatever way you decide you want to feel good, focus and achieve your goals. These techniques produce proven results with practice! Read our testimonials. In this busy world, make the time for yourself for a bit of personal development.</p>
-            </div>
-            <div class="tab-pane" id="profile">...</div>
-            <div class="tab-pane" id="messages">...</div>
-            <div class="tab-pane" id="settings">...</div>
-        </div>
+    <hr>
+    <div class="tab-content text-center">
+      <div class="tab-pane active" id="home">
+        <!-- <p class="text-muted">He guides simple yet powerful coaching techniques to support you in achieving your goals to become a healthier, happier you. Relax and focus, with private or group sessions, through Yoga, Laughing or other relaxation techniques. In whatever way you decide you want to feel good, focus and achieve your goals. These techniques produce proven results with practice! Read our testimonials. In this busy world, make the time for yourself for a bit of personal development.</p> -->
+
+        <p style="text-align: center;"><span style="color: rgb(0, 0, 0); font-family: arial, sans-serif; font-size: 13px;"><span style="font-size:18px;"><strong>Embody </strong></span>the visions for your organisation. <span style="font-size:18px;"><strong>E</strong></span></span><span style="font-size: 13px; color: rgb(0, 0, 0); font-family: arial, sans-serif;"><span style="font-size:18px;"><strong>mpower</strong></span>&nbsp;your employees to <span style="font-size:16px;">cultivate behaviours to&nbsp;</span><strong><span style="font-size:18px;">Excel</span></strong></span>&nbsp;in their jobs&nbsp;</span><span style="font-size: 13px; color: rgb(0, 0, 0); font-family: arial, sans-serif;">through transformative behavioural coaching.</p>
+
+        <p>Informed by the latest research in neuroplasticity and 17 years of experience, Frazer's workshops lead your employees to transformative behavioural awareness.</p>
+        <p>The modern workplace demands a lot from employees, whether it is stressful clients or the constant change of the knowledge economy. &nbsp;Rather than just coping in these environments, behavioural awareness enables teams to thrive.</p>
+        <p>&nbsp;</p>
+        <p>Frazer delivers business training tailored to the aims of your team. &nbsp;Services offered include: &nbsp;</p>
+        <ul>
+          <li>Laughter workshops for stress management</li>
+          <li>Mindfulness for focus&nbsp;</li>
+          <li>Behavioural transformation for smarter work habits</li>
+        </ul>
+        <p>&nbsp;</p>
+        <p>Contact Frazer now to have a discussion about how he can help your team excel. &nbsp;Call 0413 700 718 or email&nbsp;<a href="mailto:frazer@frazerk.net?subject=Workshops%20to%20help%20my%20team%20thrive">frazer@frazerk.net</a></p>
+        <p>&nbsp;</p>
+      </div>
 
 
     </div>
+
+
+    <div class="tab-pane" id="profile">...</div>
+
+
+
+    <div class="tab-pane" id="messages">...</div>
+
+
+    <div class="tab-pane" id="settings">...</div>
+  </div>
+
+
+</div>
 </section>
