* Adding more content

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,7 +12,7 @@
 
     <div class="nav row text-center">
       <div class="col-md-3">
-        <a href="#home" data-toggle="tab">
+        <a href="#corporate" data-toggle="tab">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -21,7 +21,7 @@
         </a>
       </div>
       <div class="col-md-3">
-        <a href="#profile" data-toggle="tab">
+        <a href="#private" data-toggle="tab">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="col-md-3">
-        <a href="#messages" data-toggle="tab">
+        <a href="#public" data-toggle="tab">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
@@ -39,7 +39,7 @@
         </a>
       </div>
       <div class="col-md-3">
-        <a href="#messages" data-toggle="tab">
+        <a href="#education" data-toggle="tab">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
@@ -50,39 +50,123 @@
     </div>
 
     <hr>
-    <div class="tab-content text-center">
-      <div class="tab-pane active" id="home">
+    <div class="tab-content">
+      <div class="tab-pane active" id="corporate">
         <!-- <p class="text-muted">He guides simple yet powerful coaching techniques to support you in achieving your goals to become a healthier, happier you. Relax and focus, with private or group sessions, through Yoga, Laughing or other relaxation techniques. In whatever way you decide you want to feel good, focus and achieve your goals. These techniques produce proven results with practice! Read our testimonials. In this busy world, make the time for yourself for a bit of personal development.</p> -->
 
-        <p style="text-align: center;"><span style="color: rgb(0, 0, 0); font-family: arial, sans-serif; font-size: 13px;"><span style="font-size:18px;"><strong>Embody </strong></span>the visions for your organisation. <span style="font-size:18px;"><strong>E</strong></span></span><span style="font-size: 13px; color: rgb(0, 0, 0); font-family: arial, sans-serif;"><span style="font-size:18px;"><strong>mpower</strong></span>&nbsp;your employees to <span style="font-size:16px;">cultivate behaviours to&nbsp;</span><strong><span style="font-size:18px;">Excel</span></strong></span>&nbsp;in their jobs&nbsp;</span><span style="font-size: 13px; color: rgb(0, 0, 0); font-family: arial, sans-serif;">through transformative behavioural coaching.</p>
+        <p style="text-align: center;"><strong style="font-size:18px;">Embody</strong> the visions for your organisation. <strong style="font-size:18px;">Empower</strong> your employees to cultivate behaviours to <strong style="font-size:18px;">Excel</strong> in their jobs through transformative behavioural coaching.</p>
 
         <p>Informed by the latest research in neuroplasticity and 17 years of experience, Frazer's workshops lead your employees to transformative behavioural awareness.</p>
         <p>The modern workplace demands a lot from employees, whether it is stressful clients or the constant change of the knowledge economy. &nbsp;Rather than just coping in these environments, behavioural awareness enables teams to thrive.</p>
         <p>&nbsp;</p>
-        <p>Frazer delivers business training tailored to the aims of your team. &nbsp;Services offered include: &nbsp;</p>
+        <p>Frazer delivers business training tailored to the aims of your team. Services offered include:</p>
         <ul>
           <li>Laughter workshops for stress management</li>
-          <li>Mindfulness for focus&nbsp;</li>
+          <li>Mindfulness for focus</li>
           <li>Behavioural transformation for smarter work habits</li>
         </ul>
         <p>&nbsp;</p>
-        <p>Contact Frazer now to have a discussion about how he can help your team excel. &nbsp;Call 0413 700 718 or email&nbsp;<a href="mailto:frazer@frazerk.net?subject=Workshops%20to%20help%20my%20team%20thrive">frazer@frazerk.net</a></p>
-        <p>&nbsp;</p>
+        <p>Contact Frazer now to have a discussion about how he can help your team excel. Call 0413 700 718 or email<a href="mailto:frazer@frazerk.net?subject=Workshops%20to%20help%20my%20team%20thrive">frazer@frazerk.net</a></p>
       </div>
 
 
     </div>
 
 
-    <div class="tab-pane" id="profile">...</div>
+    <div class="tab-pane" id="private">
+      ><p>Having trouble coping at work?</p>
+      <p>Want to finally kick that cigarette habit?</p>
+      <p>Need help deciding on a new path in life?</p>
+      <p>Want to boost your mind power?</p>
+      <p>From excellence coaching, to creating peace of mind, what ever you need in regards to your personal habits, wellbeing or thought patterns - Frazer's coaching can be tailored to suit your needs.</p>
+      <p>Great for getting to the heart of issues, and improving your mental state of mind</p>
+      <p>Coaching is available as one-on-one sessions, or in small groups.</p>
+      <p>Group coaching </p>
+      <p>Got a few friends or colleagues you want to join in too? Frazer can do group yoga and relaxation sessions. Great for the end of a tiring week, or on a quick 30 minute Monday lunch break.</p>
+      <p>If you would like to book a time, or ask anything<br>
+        please call on 0413700718 or email me on <a href="mailto:frazer@unitedvisions.org">frazer@unitedvisions.org</a>.</p>
+    </div>
 
 
 
-    <div class="tab-pane" id="messages">...</div>
+    <div class="tab-pane" id="public">
+      <p>Choose from our wide range of public workshops to increase your vitality, peace and happiness! </p>
+      <p>&nbsp;</p>
+      <ul>
+        <li>Yoga</li>
+        <li>Meditation</li>
+        <li>Laughter</li>
+        <li>Positive Thinking and Habit Change</li>
+      </ul>
+      <p>&nbsp;</p>
+      <p><a href="http://www.frazerk.net/calendar">You can see our calendar of events here.</a></p>
+      <p>&nbsp;</p>
+      <p><strong>Mindful Yoga with Frazer</strong></p>
+      <p>Frazer’s&nbsp;developed this&nbsp;unique style of yoga, by taking the best from many different styles. It includes mental training as well as physical training, similar to traditional yoga, however the meditations and metaphors are designed to suit our modern life. The practice includes meditations and contemplations, with a no nonsense approach and a good dose of self kindness.</p>
+      <p>&nbsp;</p>
+      <p><strong>Meditation</strong></p>
+      <p>Mindfulness</p>
+      Frazer's mindfulness sessions are a modern variation of the traditional mindfulness meditation to create calm and self awareness. Sessions help develop your concentration, ability to avoid distractions, and capacity to think clearly and be more goal orientated.
+      &nbsp;
+      Compassion and Relaxation
+      &nbsp;
+      Guided meditation beginning with compassion, which is designed to foster enjoyment in the care and love we all have in our lives. This deepens and strengthens your capacity to have understanding for others and feel peace. &nbsp;The session will end with a relaxation technique. &nbsp;This creates well needed deep rest, and some time to dream about the compassion you have cultivated.
+      &nbsp;
+      &nbsp;
+      <strong>Laughter</strong>
+      Incredibly popular hysterical and liberating sessions, where you learn to connect to other people’s happiness and laugh together until you are all are literally rolling around on the floor overflowing with joy.
+      &nbsp;
+      &nbsp;
+      <strong>Positive Thinking and Habit Change</strong>
+      The positivity sessions facilitate the practice of skills for fast habit creation, feeling amazing and achieving pure relaxation. These skills can be applied to all areas of a person's life, eg. creating confidence, good healthy habits, enjoying your studies, being happy, clear and bright and learning faster with more efficiency.
+      &nbsp;
+      <p>&nbsp;</p>
+      <p>If you would like to book an event for an organisation or your friends, family or self, please call on 0413700718 or email me on <a href="mailto:frazer@unitedvisions.org">frazer@unitedvisions.org</a>.</p>
+    </div>
 
-
-    <div class="tab-pane" id="settings">...</div>
   </div>
+
+
+  <div class="tab-pane" id="education">
+
+    <div class="field-item even" property="content:encoded"><p>Frazer offers tailored workshops for all ages and has delivered sessions in primary and secondary schools as well as universities.</p>
+      <p>Find out below what he has to offer your students:</p>
+      <p>&nbsp;</p>
+      <p><strong>Primary</strong></p>
+      <p>Coaching for life</p>
+      <p>Students will learn that the habits and emotions that we practice become part of our automatic reactions to life. We will create an environment that allows them to envisage new habits and attitudes. While this can literally be applied to every area of the students' lives, we will focus on social confidence and comfort, positive attitudes towards school and themselves, and creating healthy habits that will bring well being to their lives.</p>
+      <p>&nbsp;</p>
+      <p>Laughter&nbsp;</p>
+      <p>Incredibly popular hysterical and liberating sessions, where you learn to connect to other people’s happiness and laugh together until you are all literally rolling around on the floor overflowing with joy. &nbsp;The skills learnt in these sessions are useful to increase student wellbeing and decrease stress levels.</p>
+      <p>&nbsp;</p>
+      <p><strong>Secondary</strong></p>
+      <p>Coaching for life</p>
+      <p>Students will learn that the habits and emotions that we practice become part of our automatic reactions to life. We will create an environment that allows them to envisage new habits and attitudes. While this can literally be applied to every area of the students lives, we will focus on social confidence and comfort, positive attitudes towards school and themselves and creating healthy habits that will bring well being to their lives.</p>
+      <p>Enjoying exams</p>
+      <p>Students will learn new techniques to relax and gain the confidence to excel under the pressure of exams. &nbsp;Exam time will no longer fill them with dread, instead they will now be looking forward to it as an opportunity to demonstrate all the knowledge they have learnt during the year!</p>
+      <p>Memory booster</p>
+      <p>Frazer will introduce the students to a new suite of methods to enhance their memory and recall capacity (eg.&nbsp;Method of loci). &nbsp;With a bit of practice, these methods will have the students remembering up to 100 concepts at a time, with can be applied to learning in every subject, for example, foreign language vocab, periodic table, literature quotes. &nbsp;He will also&nbsp;</p>
+      <p>Laughter&nbsp;</p>
+      <p>Incredibly popular hysterical and liberating sessions, where you learn to connect to other people’s happiness and laugh together until you are all are literally rolling around on the floor overflowing with joy.&nbsp;The skills learnt in these sessions are useful to increase student wellbeing and decrease stress levels.</p>
+      <p>&nbsp;</p>
+      <p><strong>Tertiary&nbsp;</strong></p>
+      <p>De-stress</p>
+      <p>Frazer offers many difference guided meditations all aimed at creating calm and relaxation.</p>
+      <p>Memory booster</p>
+      <p>Frazer will introduce the students to new methods to enhance their memory and recall capacity (eg.&nbsp;Method of loci). &nbsp;With a bit of practice, these methods will have the students remembering up to 100 concepts at a time, with can be applied to learning in every subject, for example, foreign language vocab, periodic table, literature quotes.</p>
+      <p>Enjoy exams</p>
+      <p>Students will learn new techniques to relax and gain the confidence to excel under the pressure of exams. &nbsp;Exam time will no longer fill them with dread, instead they will now be looking forward to it as an opportunity to demonstrate all the knowledge they have learnt during the year!</p>
+      <p>Positive thinking</p>
+      <p>The positivity sessions facilitate the practice of skills for fast habit creation, feeling amazing and achieving pure relaxation. These skills can be applied to all areas of a person's life, eg. creating confidence, good healthy habits, enjoying your studies, being happy, clear and bright and learning faster with more efficiency.</p>
+      <p>Laughter&nbsp;</p>
+      <p>Incredibly popular hysterical and liberating sessions, where you learn to connect to other people’s happiness and laugh together until you are all are literally rolling around on the floor overflowing with joy.&nbsp;The skills learnt in these sessions are useful to increase student wellbeing and decrease stress levels.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+    </div>
+
+  </div>
+</div>
 
 
 </div>
