** A general commit update

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -73,7 +73,7 @@
 
       <!-- PRIVATE COACHING -->
       <div class="tab-pane" id="private">
-        ><p>Having trouble coping at work?</p>
+        <p>Having trouble coping at work?</p>
         <p>Want to finally kick that cigarette habit?</p>
         <p>Need help deciding on a new path in life?</p>
         <p>Want to boost your mind power?</p>
@@ -99,7 +99,7 @@
           <li>Positive Thinking and Habit Change</li>
         </ul>
         <p>&nbsp;</p>
-        <p><a href="http://www.frazerk.net/calendar">You can see our calendar of events here.</a></p>
+        <!-- <p><a href="http://www.frazerk.net/calendar">You can see our calendar of events here.</a></p> -->
         <p>&nbsp;</p>
         <p><strong>Mindful Yoga with Frazer</strong></p>
         <p>Frazer’s&nbsp;developed this&nbsp;unique style of yoga, by taking the best from many different styles. It includes mental training as well as physical training, similar to traditional yoga, however the meditations and metaphors are designed to suit our modern life. The practice includes meditations and contemplations, with a no nonsense approach and a good dose of self kindness.</p>
