--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,10 +15,14 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
+                    <li><a href="/frazerk.net/testimonials/">Testimonials</a>
+                    </li>
+                  <!--
                     <li><a href="#">Privacy Policy</a>
                     </li>
                     <li><a href="#">Terms of Use</a>
                     </li>
+                  -->
                 </ul>
             </div>
         </div>
