--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -17,22 +17,22 @@
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
-                              {{if post.client }}
+                              {% if post.client %}
                                 <li>Client:
                                     <strong>{{ post.client }}
                                     </strong>
                                 </li>
-                                {{endif}}
+                                {% endif %}
                                 <li>Date:
                                     <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
                                     </strong>
                                 </li>
-                                {{ if post.category }}
+                                {% if post.category %}
                                 <li>Service:
                                     <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
                                     </strong>
                                 </li>
-                                {{ endif }}
+                                {% endif %}
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
