--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,9 +3,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
+        <div class="intro-lead-in">
+                <p>Do you want to be happier, healthier and calmer?</p>
+                <p>Do you want to achieve something great?</p>
+                <p>Do you want to achieve your personal and business goals?</p>
+                <p>Do you want to work smarter, and achieve better results?</p>
+        </div>
         <h2 class="section-heading">Services</h2>
-
-        <h3 class="section-subheading text-muted">Frazer Kirkman is available for a variety of coaching services.</h3>
       </div>
     </div>
 
