--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,13 +11,7 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">
-                <p>Do you want to be happier, healthier and calmer?</p>
-                <p>Do you want to achieve something great?</p>
-                <p>Do you want to achieve your personal and business goals?</p>
-                <p>Do you want to work smarter, and achieve better results?</p>
-            </div>
-            <div class="intro-heading">Meet International Coach and Facilitator Frazer Kirkman</div>
+            <div class="intro-heading">International Coach and Facilitator Frazer Kirkman</div>
             <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
         </div>
     </div>
