--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,43 +14,53 @@
     </div>
 
 
-    <div class="nav row text-center">
-      <div class="col-md-3">
-        <a href="#corporate" data-toggle="tab">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Corporate</h4>
-        </a>
-      </div>
-      <div class="col-md-3">
-        <a href="#private" data-toggle="tab">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Private Coaching</h4>
-        </a>
-      </div>
-      <div class="col-md-3">
-        <a href="#public" data-toggle="tab">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Public Workshops</h4>
-        </a>
-      </div>
-      <div class="col-md-3">
-        <a href="#education" data-toggle="tab">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Educational Institutions</h4>
-        </a>
-      </div>
+    <div class="row text-center">
+      <ul class="nav nav-tabs">
+        <li>
+          <div class="col-md-3">
+            <a href="#corporate" data-toggle="tab">
+              <span class="fa-stack fa-4x">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              </span>
+              <h4 class="service-heading">Corporate</h4>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="col-md-3">
+            <a href="#private" data-toggle="tab">
+              <span class="fa-stack fa-4x">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              </span>
+              <h4 class="service-heading">Private Coaching</h4>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="col-md-3">
+            <a href="#public" data-toggle="tab">
+              <span class="fa-stack fa-4x">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              </span>
+              <h4 class="service-heading">Public Workshops</h4>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="col-md-3">
+            <a href="#education" data-toggle="tab">
+              <span class="fa-stack fa-4x">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              </span>
+              <h4 class="service-heading">Educational Institutions</h4>
+            </a>
+          </div>
+        </li>
+      </ul>
     </div>
 
     <hr>
