--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,14 +8,8 @@
 
 {% include nav_index.html %}
 
-<header>
-    <div class="container">
-        <div class="intro-text">
-            <div class="intro-heading">International Coach and Facilitator Frazer Kirkman</div>
-            <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
-        </div>
-    </div>
-</header>
+{% include header.html %}
+
 
 {{ content }}
 {% include footer.html %}
