more header padding on bigger screen

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -17,7 +17,7 @@
     <div class="row text-center">
       <ul class="nav nav-tabs">
         <li>
-          <div class="col-md-3">
+          <div class="service col-md-3">
             <a href="#corporate" data-toggle="tab">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -28,7 +28,7 @@
           </div>
         </li>
         <li>
-          <div class="col-md-3">
+          <div class="service col-md-3">
             <a href="#private" data-toggle="tab">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -39,7 +39,7 @@
           </div>
         </li>
         <li>
-          <div class="col-md-3">
+          <div class="service col-md-3">
             <a href="#public" data-toggle="tab">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -50,7 +50,7 @@
           </div>
         </li>
         <li>
-          <div class="col-md-3">
+          <div class="service col-md-3">
             <a href="#education" data-toggle="tab">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
