--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">International Coach and Facilitator Frazer Kirkman</div>
+            <div class="intro-lead-in">International<br>Coach and Facilitator<br>Frazer Kirkman</div>
             <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
         </div>
     </div>
