--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">International<br>Coach and Facilitator<br>Frazer Kirkman</div>
-            <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+            <!--a href="#services" class="page-scroll btn btn-xl">Tell Me More</a-->
         </div>
     </div>
 </header>
