--- a/assets/css/_includes/main.css
+++ b/assets/css/_includes/main.css
@@ -905,3 +905,8 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
 }
+
+.testimonialImage {
+    margin-left: 20px;   
+}
+}
