fixes for missing alt, missing hash link, etc

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -3,23 +3,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="assets/img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    <a href="#page-top">
+                        <img src="assets/img/logos/envato.jpg" class="img-responsive img-centered" alt="envato">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="assets/img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                    <a href="#page-top">
+                        <img src="assets/img/logos/designmodo.jpg" class="img-responsive img-centered" alt="designmodo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="assets/img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                    <a href="#page-top">
+                        <img src="assets/img/logos/themeforest.jpg" class="img-responsive img-centered" alt="themeforest">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="assets/img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                    <a href="#page-top">
+                        <img src="assets/img/logos/creative-market.jpg" class="img-responsive img-centered" alt="creative-market">
                     </a>
                 </div>
             </div>
