--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -16,7 +16,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="assets/img/portfolio/{{ post.thumbnail }}" class="img-responsive" alt="">
+                        <img src="assets/img/portfolio/{{ post.thumbnail }}" class="img-responsive" alt="{{ post.title }}">
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ post.title }}</h4>
