--- a/_includes/nav_page.html
+++ b/_includes/nav_page.html
@@ -20,7 +20,7 @@
                 </li>
                 {% for page in site.data.nav %}
                 <li>
-                    <a href="{{ nav.page | prepend: site.baseurl }}">{{ page.title }}</a>
+                    <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                 </li>
                 {% endfor %}
             </ul>
