--- a/assets/css/_includes/main.css
+++ b/assets/css/_includes/main.css
@@ -260,6 +260,14 @@ fieldset[disabled] .btn-xl.active {
     .navbar-default.navbar-shrink .navbar-brand {
         font-size: 1.5em;
     }
+    
+    .navbar-nav > li > a {
+        padding-top: 19.5px;
+        padding-bottom: 19.5px;
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+    
 }
 
 .index header {
