Revert "proposal for new header, screenshot here:"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <h1 class="intro-lead-in">International Coach and Facilitator</h1>
-            <div class="intro-heading">Frazer Kirkman</div>
+            <div class="intro-lead-in">International<br>Coach and Facilitator<br>Frazer Kirkman</div>
             <!--a href="#services" class="page-scroll btn btn-xl">Tell Me More</a-->
         </div>
     </div>
